[package]
name = "checkit"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
iced_aw = "0.12"
iced_futures = "0.13"
futures = "0.3"
rfd = "0.15"
log = "0.4"
serde_json = "1.0"
env_logger = "0.11"
ssh2 = "0.9"
ssh2-config = "0.5"
duct = "1.0"
anyhow = "1.0"
whoami = "1.6"
async-stream = "0.3"
ansi-parser = "0.9"